# matters

./: .gitignore  Cargo.toml  LICENSE  flake.nix  index.html  main.js  matters.wasm  run-example-site.sh  rust-toolchain.toml  styles.css
.github/workflows/: checks.yaml  pages.yaml
cli/: Cargo.toml
cli/src/: main.rs
example-site/: index.html  main.js
lib/: Cargo.toml
lib/src/: error.rs  lib.rs
pdf/: Cargo.toml
pdf/src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
