[package]
name = "matters_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
matters_lib = { path = "../lib", features = ["ffi"] }

getrandom = { version = "0.2", features = ["js"] }
rand = { workspace = true, default-features = false, features = ["small_rng"] }
